[metadata]
name = edrn.auth
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Authentication and maybe authorization too for EDRN
license = apache-2.0
keywords = cancer, portal, data, auth, authn, authz
version = file: src/edrn/auth/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrn
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    edrnsite.controls
    edrnsite.content
    django  < 5
    wagtail < 5


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
