[metadata]
name = edrn.collabgroups
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network: collaborative groups
license = apache-2.0
keywords = cancer, portal, django, wagtail, collaborative groups, collaboration, groups
version = file: src/edrn/collabgroups/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrn
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    django  < 6
    wagtail < 6
    edrnsite.streams
    edrnsite.content


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
