[metadata]
name = edrn.metrics
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Data quality and other metrics for EDRN
license = apache-2.0
keywords = cancer, portal, data, metrics
version = file: src/edrn/metrics/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrn
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    edrn.auth
    django  < 5
    wagtail < 6


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
