[metadata]
name = edrn.theme
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Look and feel for Early Detection Research Network websites using Wagtail and Django
license = apache-2.0
keywords = cancer, portal, data, theme
version = file: src/edrn/theme/VERSION.txt
url = https://github.com/EDRN/P5


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrn
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    edrn.auth
    edrnsite.controls
    django  <  5
    wagtail <  4


[options.packages.find]
where = src


[options.package_data]
* = *.html


[options.extras_require]
