[metadata]
name = edrnsite.content
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network site: various content types
license = apache-2.0
keywords = cancer, portal, data, content, site
version = file: src/edrnsite/content/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    edrnsite.streams
    django  < 5
    wagtail < 5


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
