[metadata]
name = edrnsite.content
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network site: various content types
license = apache-2.0
keywords = cancer, portal, data, content, site
version = file: src/edrnsite/content/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    edrnsite.streams
    django  < 5
    wagtail < 5
    django-widget-tweaks ~= 1.4.12
    wagtail-django-recaptcha ~= 1.0
    django-recaptcha ~= 3.0.0
    gdown ~= 4.7.1
    pandas == 1.5.3   # Must match py3-pandas package in Dockerfile


# A couple of the forms in this package actually depend on eke.knowledge, but eke.knowledge depends on
# this package, so circular dependency issue. We should've put forms into their own package.


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
