[metadata]
name = edrnsite.content
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network site: various content types
license = apache-2.0
keywords = cancer, portal, data, content, site
version = file: src/edrnsite/content/VERSION.txt


[options]
include_package_data = True
zip_safe = False
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    edrnsite.streams
    django  < 6, > 4
    wagtail < 8, >= 6
    django-widget-tweaks ~= 1.4.12
    wagtail-django-recaptcha ~= 2.1.1
    django-recaptcha ~= 4.1.0
    gdown ~= 4.7.1
    pandas == 2.3.2


# A couple of the forms in this package actually depend on eke.knowledge, but eke.knowledge depends on
# this package, so circular dependency issue. We should've put forms into their own package.


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
