[metadata]
name = edrnsite.controls
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Control panels for the Early Detection Research Network portal
license = apache-2.0
keywords = cancer, portal, data, controls, settings
version = file: src/edrnsite/controls/VERSION.txt


[options]
include_package_data = True
zip_safe = False
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    django  < 6, > 4
    wagtail < 8, >= 6


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
