[metadata]
name = edrnsite.ploneimport
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network: import from Plone
license = apache-2.0
keywords = cancer, portal, django, wagtail, plone, good-bye-frustration
version = file: src/edrnsite/ploneimport/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    django  < 5, > 4
    wagtail < 6, > 5


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
