[metadata]
name = edrnsite.policy
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Site policy for the Early Detection Research Network portal
license = apache-2.0
keywords = cancer, portal, data
version = file: src/edrnsite/policy/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find:
python_requires = >= 3.9
install_requires =
    edrn.auth
    edrnsite.controls
    eke.knowledge
    edrn.theme
    edrn.collabgroups
    edrnsite.streams
    edrnsite.content
    edrnsite.search
    edrnsite.ploneimport
    eke.biomarkers
    edrn.metrics
    celery[redis]         ~= 5.2.7
    dj-database-url       ~= 0.5.0
    django                ~= 4.1.7
    django-auth-ldap      ~= 4.1.0
    django-celery-results ~= 2.4.0
    django-redis          ~= 5.2.0
    pillow                ~= 9.3.0         # Must match py3-pillow package installed in Dockerfile
    psycopg2              ~= 2.9.5         # Must match py3-pyscopg2 package installed in Dockerfile
    pymemcache            ~= 3.5.2
    wagtail               ~= 4.2
    wagtail-favicon       ~= 0.2.0
    wagtail-metadata      >= 4.0.1, <4.1
    tzdata                == 2022.1        # Must match py3-tz-2022.1 package installed in Dockerfile
    wagtailmenus          == 3.1.3
    wagtail-robots        == 0.4.0


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
dev =
    django-debug-toolbar == 3.2.2
    django-extensions    == 3.1.5

