[metadata]
name = edrnsite.policy
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Site policy for the Early Detection Research Network portal
license = apache-2.0
keywords = cancer, portal, data
version = file: src/edrnsite/policy/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find:
python_requires = >= 3.9
install_requires =
    edrnsite.controls
    eke.knowledge
    edrn.theme
    edrn.collabgroups
    edrnsite.streams
    edrnsite.content
    edrnsite.search
    edrnsite.ploneimport
    eke.biomarkers
    edrn.metrics
    edrn.auth             ~= 2.0.0
    celery[redis]         ~= 5.2.7
    dj-database-url       ~= 2.1.0
    django                ~= 4.2.9
    django-auth-ldap      ~= 4.1.0
    django-celery-results ~= 2.5.1
    django-redis          ~= 5.4.0
    pillow                == 9.5.0        # Must match py3-pillow package installed in Dockerfile
    psycopg2              == 2.9.6        # Must match py3-pyscopg2 package installed in Dockerfile
    pymemcache            ~= 3.5.2
    wagtail               == 5.2.3
    wagtail-favicon       ~= 0.3.0
    wagtail-metadata      ~= 5.0.0
    tzdata                == 2022.1
    wagtailmenus          ~= 3.1.9
    wagtail-robots        @ git+https://github.com/unexceptable/wagtail-robots.git@9a47b6c09bec120bd5a85f4c7c1856cdc7f71f51


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
dev =
    django-debug-toolbar == 3.2.2
    django-extensions    == 3.1.5

