[metadata]
name = edrnsite.policy
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Site policy for the Early Detection Research Network portal
license = apache-2.0
keywords = cancer, portal, data
version = file: src/edrnsite/policy/VERSION.txt


[options]
include_package_data = True
zip_safe = False
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    edrnsite.controls
    eke.knowledge
    edrn.theme
    edrn.collabgroups
    edrnsite.streams
    edrnsite.content
    edrnsite.search
    edrnsite.ploneimport
    eke.biomarkers
    edrn.metrics
    edrn.auth             ~= 2.2.0
    celery[redis]         ~= 5.5.3
    dj-database-url       ~= 3.0.1
    django                ~= 5.2.6
    django-auth-ldap      ~= 5.2.0
    django-celery-results ~= 2.6.0
    django-redis          ~= 6.0.0
    pillow                == 10.4.0
    psycopg[binary]       == 3.2.9
    wagtail               ~= 7.1.1
    wagtail-favicon       ~= 0.3.0
    wagtail-metadata      ~= 5.0.0
    tzdata                >= 2025.2
    wagtailmenus          ~= 4.0.4
    wagtail-robots        @ git+https://github.com/torchbox-forks/wagtail-robots.git@1.2.2+tbx
    django-modelcluster   ~= 6.4
    kombu                 ~= 5.5.4
    wagtail-modeladmin    ~= 2.2.0  # No longer included in Wagtail 5.2
    Flask                 == 2.1.3  # Prevent "pip is still looking at multiple versions" slow-downs

[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
dev =
    django-extensions ~= 4.1

# I never actually used this one:
#     django-debug-toolbar ~= 6.0.0
