[metadata]
name = edrnsite.search
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network: site-wide search
license = apache-2.0
keywords = cancer, portal, data, content, site, search
version = file: src/edrnsite/search/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    edrnsite.controls
    django < 5
    wagtail < 6
    elasticsearch == 7.13.4
    openai ~= 1.52.0
    markdown ~= 3.7


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
