[metadata]
name = edrnsite.search
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network: site-wide search
license = apache-2.0
keywords = cancer, portal, data, content, site, search
version = file: src/edrnsite/search/VERSION.txt


[options]
include_package_data = True
zip_safe = False
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    edrnsite.controls
    boto3 ~= 1.37.17
    django < 6, > 4
    elasticsearch == 7.17.12
    markdown ~= 3.7
    wagtail < 8, >= 6

[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
