[metadata]
name = edrnsite.streams
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Early Detection Research Network site: stream fields
license = apache-2.0
keywords = cancer, portal, wagtail, content management, streams, site
version = file: src/edrnsite/streams/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    django < 5, > 4
    wagtail < 6, > 5


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
