[metadata]
name = edrnsite.test
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Testing support for the EDRN site
license = apache-2.0
keywords = cancer, portal, data, testing
version = file: src/edrnsite/test/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrnsite
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    selenium ~= 4.9.1
    edrnsite.controls
    edrnsite.content
    django  < 5
    wagtail < 5


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
