[metadata]
name = eke.biomarkers
author = Sean Kelly
author_email = kelly@seankelly.biz
description = EDRN Knowledge Environment: biomarkers
license = apache-2.0
keywords = cancer, portal, data, information, knowledge, biomarkers
version = file:src/eke/biomarkers/VERSION.txt
url = https://github.com/EDRN/P5


[options]
include_package_data = True
zip_safe = False
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    eke.knowledge
    edrnsite.content
    edrn.auth
    biopython          == 1.85
    django             <  6, > 4
    django_plotly_dash == 1.7.1
    plotly             ~= 5.24.1
    numpy              == 2.3.3
    pandas             == 2.3.2
    rdflib             ~= 6.1.1   # Regression in 6.2.0, see https://github.com/RDFLib/rdflib/issues/2120
    sortedcontainers   ~= 2.4.0
    wagtail            <  8, >= 6
    Werkzeug           == 2.0.3   # django_plotly_dash fails with 2.1


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
