[metadata]
name = eke.geocoding
author = Sean Kelly
author_email = kelly@seankelly.biz
description = EDRN Knowledge Environment: geocoding
license = apache-2.0
keywords = cancer, portal, data, geocoding, address, mapping, information, knowledge
version = file:src/eke/geocoding/VERSION.txt
url = https://github.com/EDRN/P5


[options]
include_package_data = True
zip_safe = False
namespace_packages = eke
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    boto3    ~= 1.24.75
    django   <  5, > 4
    geocoder ~= 1.38.1
    wagtail  <  6, > 5


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]
